objects/Account.object
<CustomObject>
    <fields>
        <fullName>AverageAnnualIncome__c</fullName>
        <label>AverageAnnualIncome</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
</CustomObject>